# telegram-knowledge-graph

./: .env.example  .gitignore  BOT_STRATEGY.md  CLAUDE.md  CLOUDFLARE_DEPLOY.md  KG_SPEC.md  README.md
agent/: pyproject.toml
agent/deploy/: ask_server.plist.template  cloudflared-config.example.yml  cloudflared.plist.template  launchd.plist.template
agent/scripts/: backfill_telethon.py  canonicalize_topics.py  fetch_topics.py  init_fork.py  refresh_summaries.py  resolve_persons.py  setup_wizard.py  synthesize_vault.py
agent/src/: ask_server.py  atomic.py  chat_insights.py  classify.py  concept.py  config.py  digest.py  graph.py  notify.py  orchestrator.py  person.py  poll.py  render.py  summarize.py
site/: content  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
site/functions/: _middleware.ts
site/functions/api/: ask.ts
site/quartz/components/: AskBridg3.tsx  index.ts
site/quartz/components/scripts/: askbridg3.inline.ts
site/quartz/components/styles/: askbridg3.scss
site/quartz/styles/: base.scss  custom.scss
vault/: index.md
